# indieStudio

./: .gitignore  CMakeLists.txt  README.md  untitled.iqm
.github/workflows/: codeql-analysis.yml  crossBuildTest.yml  push_epitech.yml  push_test.yml
assets/ground_asset/sand_asset_1/: sand_asset_1.mtl
assets/ground_asset/sand_asset_2/: sand_asset_2.mtl
assets/ground_asset/sand_asset_3/: sand_asset_3.mtl
assets/ground_asset/sand_asset_basic/: basicBeach.mtl
assets/maps/: map1.txt  map2.txt
assets/other_asset/water_bomb/: water_bomb.mtl
assets/wall asset/breakable_wall/: wood_box_breakable.mtl
assets/wall asset/castle_wall/: sand_castle.mtl
assets/wall asset/plamier_wall/: palmier_wall_1.mtl
assets_test/: anim_playeriqm.iqm  final.iqm  final_anim.iqm
cmake/: Findraylib.cmake
include/: Model.hpp  model.hpp  modelAnimation.hpp  shape3d.hpp
ressources/maps/: map1.txt
src/: AudioDevice.cpp  AudioDevice.hpp  ButtonCallbacks.cpp  ButtonCallbacks.hpp  Camera.cpp  Camera.hpp  CameraDevice.hpp  Core.cpp  Core.hpp  Entity.cpp  Entity.hpp  EventListener.cpp  EventListener.hpp  ExitEvent.hpp  Font.cpp  Font.hpp  GamepadEvent.hpp  GamepadStickCallbacks.cpp  GamepadStickCallbacks.hpp  IEntity.hpp  IEvent.hpp  IScene.hpp  IndiCam.cpp  IndiCam.hpp  KeyboardCallbacks.cpp  KeyboardCallbacks.hpp  KeyboardEvent.cpp  KeyboardEvent.hpp  Model.cpp  Model.hpp  ModelAnimation.cpp  ModelAnimation.hpp  MouseCallbacks.cpp  MouseCallbacks.hpp  MouseEvent.hpp  Music.cpp  Music.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  (+23 more)
src/Components/: Component.cpp  Component.hpp
src/Systems/: AudioSystem.cpp  AudioSystem.hpp  EventSystem.cpp  EventSystem.hpp  GameSystem.cpp  GameSystem.hpp  GraphicSystem.cpp  GraphicSystem.hpp  ISystem.hpp  System.hpp
src/camera/: Camera.cpp  Camera.hpp
src/components/: AIPlayer.cpp  AIPlayer.hpp  AVector.cpp  AVector.hpp  Bomb.cpp  Bomb.hpp  Bonus.hpp  CameraComponent.cpp  CameraComponent.hpp  Component.cpp  Component.hpp  Cube.cpp  Cube.hpp  Destructible.hpp  EventListener.cpp  EventListener.hpp  EventListenerComponent.hpp  Grid.cpp  Grid.hpp  HitboxComponent.cpp  HitboxComponent.hpp  IComponent.hpp  Model3D.hpp  ModelAnim.hpp  MusicComponent.hpp  ParticleCloud.cpp  ParticleCloud.hpp  Player.cpp  Player.hpp  Position.cpp  Position.hpp  Radar.cpp  Radar.hpp  Rect.hpp  SoundComponent.hpp  Sphere.cpp  Sphere.hpp  Sprite.hpp  String.hpp  Timer.hpp  (+5 more)
src/exceptions/: AssetError.hpp  AudioDeviceError.hpp  MusicError.hpp  SoundError.hpp  TextureError.hpp
src/globalTools/: Vector3D.cpp  Vector3D.hpp
src/systems/: AISystem.cpp  AISystem.hpp  AudioSystem.cpp  AudioSystem.hpp  CollideSystem.cpp  CollideSystem.hpp  EventSystem.cpp  EventSystem.hpp  GameSystem copy.cpp  GameSystem copy.hpp  GameSystem.cpp  GameSystem.hpp  GraphicSystem.cpp  GraphicSystem.hpp  ISystem.hpp  ParticlesSystem.cpp  ParticlesSystem.hpp  collideSystem.cpp  collideSystem.hpp
test_fonts/: pixantiqua.fnt
test_functions/: TestAnimations2D.cpp  TestAudioDevice.cpp  TestCamera.cpp  TestCollisions.cpp  TestEventListener.cpp  TestFont.cpp  TestModel.cpp  TestModelAnimation.cpp  TestModelsCollision.cpp  TestMusic.cpp  TestSound.cpp  TestText.cpp  TestTextures.cpp
tmp/: CameraDevice.cpp  CameraDevice.hpp
